# random-tool-github

./: Cargo.toml  README.md
src/: main.rs  random_generator.rs
