[package]
name = "random-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"

iced = "0.13.1"

[source.crates-io]
replace-with = 'mirror'

[source.mirror]
registry = "sparse+https://mirrors.tuna.tsinghua.edu.cn/crates.io-index/"

[registries.mirror]
index = "sparse+https://mirrors.tuna.tsinghua.edu.cn/crates.io-index/"
