[package]
name = "random-tool"
version = "0.1.0"
edition = "2021"

[dependencies]

iced = "0.13.1"
rand = "0.8"
regex = "1"
thiserror = "1"

[build-dependencies]
cxx-qt-build = "0.7"

[source.crates-io]
replace-with = 'mirror'

[source.mirror]
registry = "sparse+https://mirrors.tuna.tsinghua.edu.cn/crates.io-index/"

[registries.mirror]
index = "sparse+https://mirrors.tuna.tsinghua.edu.cn/crates.io-index/"
